<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_challenges">

    <fragment
        android:id="@+id/navigation_challenges"
        android:name="com.ntn.findtit.ui.challenge.ChallengeFragment"
        android:label="@string/title_challenges"
        tools:layout="@layout/fragment_challanges" />

    <fragment
        android:id="@+id/navigation_my_challenges"
        android:name="com.ntn.findtit.ui.mychallenge.MyChallengeFragment"
        android:label="@string/title_my_challenges"
        tools:layout="@layout/fragment_my_challenges" />

    <fragment
        android:id="@+id/navigation_chat"
        android:name="com.ntn.findtit.ui.chat.ChatFragment"
        android:label="@string/title_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.ntn.findtit.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_chat" />
</navigation>