<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SeeChallengeActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="320dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_launcher_background"
        android:scaleType="centerCrop"
        />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/b_squeda_pirata"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RatingBar
        style="@style/Widget.AppCompat.RatingBar.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:isIndicator="false"
        android:numStars="5"
        android:rating="3.5"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/descripci_n"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/text_description"
        app:layout_constraintEnd_toEndOf="parent"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:textSize="17sp"

        />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="196dp"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:text="@string/creador_text"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:backgroundTint="#F8F9FE"
        app:cardCornerRadius="15dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="10dp"
        app:contentPaddingLeft="20dp"
        app:contentPaddingRight="20dp"
        app:contentPaddingTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"

            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/caracter_sticas_del_desaf_o"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:textStyle="bold" />


            <LinearLayout

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/pista_principal_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/pistas_secundarias_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="15dp"
                    android:layout_height="15dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_star_icon" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:text="@string/sitios_buscar_text"
                    android:textAlignment="center"
                    android:textColor="@android:color/black"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:text="@string/dificultad_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14"
        android:orientation="horizontal"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        >

        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F8F9FE"
            android:textAlignment="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facil_text"
                android:layout_gravity="center"

                />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:backgroundTint="#CDEACD"
            android:textAlignment="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/normal_text"
                android:layout_gravity="center"

                />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F8F9FE"
            android:textAlignment="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/medio_text"
                android:layout_gravity="center"

                />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="50dp"
            android:layout_height="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F8F9FE"
            android:textAlignment="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dificil_text"
                android:layout_gravity="center"

                />



        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="70dp"
            android:layout_height="20dp"
            app:cardCornerRadius="15dp"
            app:cardElevation="0dp"
            android:backgroundTint="#F8F9FE"
            android:textAlignment="center"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/maxima_text"
                android:layout_gravity="center"

                />



        </androidx.cardview.widget.CardView>








    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>